--- a/templates/base.html
+++ b/templates/base.html
@@ -42,34 +42,28 @@
         padding-top: 10px;
       }
     </style>
-    {% block sidebar %}
+{% block sidebar %}
 
-    <style>
-      .card {
-        box-shadow: 0 16px 48px #e3e7eb;
-      }
-    </style>
+<style>
+    .card {
+        box-shadow: 0 16px 48px #E3E7EB;
+    }
+</style>
 
-    <!-- Sidebar Widgets Column -->
-    <div class="col-md-4 float-right">
-      <div class="card my-4">
+<!-- Sidebar Widgets Column -->
+<div class="col-md-4 float-right ">
+    <div class="card my-4">
         <h5 class="card-header">About Us</h5>
         <div class="card-body">
-          <p class="card-text">
-            This awesome blog is made on the top of our Favourite full stack
-            Framework 'Django', follow up the tutorial to learn how we made
-            it..!
-          </p>
-          <a
-            href="https://djangocentral.com/building-a-blog-application-with-django"
-            class="btn btn-danger"
-            >Know more!</a
-          >
+            <p class="card-text"> This awesome blog is made on the top of our Favourite full stack Framework 'Django',
+                follow up the tutorial to learn how we made it..!</p>
+            <a href="https://djangocentral.com/building-a-blog-application-with-django" class="btn btn-danger">Know
+                more!</a>
         </div>
-      </div>
     </div>
+</div>
 
-    {% endblock sidebar %}
+{% endblock sidebar %}
     <!-- Navigation -->
     <nav
       class="navbar navbar-expand-lg navbar-light bg-light shadow"
