Styling of the home page

--- a/blog/templates/index.html
+++ b/blog/templates/index.html
@@ -13,6 +13,16 @@
   .card {
     box-shadow: 0 16px 48px #e3e7eb;
   }
+  a.btn.btn-primary {
+    color: #fff;
+    background-color: hsl(50, 33%, 25%);
+    border-color: black;
+  }
+  a.btn.btn-primary:hover {
+    color: #fff;
+    background-color: hsla(50, 33%, 25%, 0.75);
+    border-color: orangered;
+  }
 </style>
 
 <header class="masthead">
