--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -20,7 +20,7 @@
 
     <style>
       .card {
-        box-shadow: 0 16px 48px #e3e7eb;
+        box-shadow: 0 16px 48px #a8acaf;
       }
     </style>
 
