--- a/templates/base.html
+++ b/templates/base.html
@@ -35,7 +35,7 @@
       }
 
       .masthead {
-        background: #3398e1;
+        background: rgb(168, 73, 73);
         height: auto;
         padding-bottom: 15px;
         box-shadow: 0 16px 48px #e3e7eb;
