Insert the comment model

--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -22,6 +22,18 @@
       .card {
         box-shadow: 0 16px 48px #a8acaf;
       }
+
+      #a.btn.btn-danger {
+        color: black;
+        background-color: orange;
+        border-color: rgb(218, 80, 80);
+      }
+
+      #a.btn.btn-danger:hover {
+        color: white;
+        background-color: rgb(218, 80, 80);
+        border-color: orange;
+      }
     </style>
 
     <!-- Sidebar Widgets Column -->
