--- a/templates/base.html
+++ b/templates/base.html
@@ -1,22 +1,35 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Health Hacks</title>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="google" content="notranslate" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+
     <link
       href="https://fonts.googleapis.com/css?family=Roboto:400,700"
       rel="stylesheet"
     />
-    <meta name="google" content="notranslate" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    {% block estra_css %}
     <link
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
       integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
       crossorigin="anonymous"
     />
+    {% endblock %} {% block onload_js %}
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.2.3/js/bootstrap.min.js"
+      integrity="sha512-1/RvZTcCDEUjY/CypiMz+iqqtaoQfAITmNSJY17Myp4Ms5mdxPS5UV7iOfdZoxcGhzFbOm6sntTKJppjvuhg4g=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+    {% endblock %}
+    <title>Health Hacks {% block title %}{% endblock %}</title>
   </head>
 
   <body>
+    {% include 'includes/header.html' %}
     <style>
       body {
         font-family: "Roboto", sans-serif;
@@ -35,7 +48,7 @@
       }
 
       .masthead {
-        background: rgb(168, 73, 73);
+        background: #3398e1;
         height: auto;
         padding-bottom: 15px;
         box-shadow: 0 16px 48px #e3e7eb;
@@ -49,7 +62,7 @@
       id="mainNav"
     >
       <div class="container-fluid">
-        <a class="navbar-brand" href="{% url 'home' %}">Django central</a>
+        <a class="navbar-brand" href="{% url 'home' %}">Health Hacks</a>
         <button
           class="navbar-toggler navbar-toggler-right"
           type="button"
@@ -82,10 +95,6 @@
     </nav>
     {% block content %}
     <!-- Content Goes here -->
-    {% endblock content %}
-    <!-- Footer -->
-    <footer class="py-3 bg-grey">
-      <p class="m-0 text-dark text-center">Copyright &copy; Django Central</p>
-    </footer>
+    {% endblock content %} {% include 'includes/footer.html' %}
   </body>
 </html>
