Add search bar to base html create static folder for css and logo image

--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -1,47 +1,18 @@
+{% load static %}
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <link
-      href="https://fonts.googleapis.com/css?family=Roboto:400,700"
-      rel="stylesheet"
-    />
-    <meta name="google" content="notranslate" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    {% block estra_css %}
-    <link
-      rel="stylesheet"
-      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-      crossorigin="anonymous"
-    />
-    {% endblock %} {% block onload_js %}
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.2.3/js/bootstrap.min.js"
-      integrity="sha512-1/RvZTcCDEUjY/CypiMz+iqqtaoQfAITmNSJY17Myp4Ms5mdxPS5UV7iOfdZoxcGhzFbOm6sntTKJppjvuhg4g=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    ></script>
-    {% endblock %}
-    <title>Health Hacks {% block title %}{% endblock %}</title>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
   </head>
   <body>
     {% block sidebar %}
 
     <style>
       .card {
-        box-shadow: 0 16px 48px #a8acaf;
-      }
-
-      #a.btn.btn-danger {
-        color: black;
-        background-color: orange;
-        border-color: rgb(218, 80, 80);
-      }
-
-      #a.btn.btn-danger:hover {
-        color: white;
-        background-color: rgb(218, 80, 80);
-        border-color: orange;
+        box-shadow: 0 16px 48px #e3e7eb;
       }
     </style>
 
