--- a/templates/base.html
+++ b/templates/base.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html>
   <head>
@@ -11,6 +13,7 @@
       rel="stylesheet"
     />
     {% block estra_css %}
+    <link rel="stylesheet" href="{% static '/css/base.css' %}" />
     <link
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
@@ -30,39 +33,14 @@
 
   <body>
     {% include 'includes/header.html' %}
-    <style>
-      body {
-        font-family: "Roboto", sans-serif;
-        font-size: 17px;
-        background-color: #fdfdfd;
-      }
-
-      .shadow {
-        box-shadow: 0 4px 2px -2px rgba(0, 0, 0, 0.1);
-      }
-
-      .btn-danger {
-        color: #fff;
-        background-color: #f00000;
-        border-color: #dc281e;
-      }
-
-      .masthead {
-        background: #3398e1;
-        height: auto;
-        padding-bottom: 15px;
-        box-shadow: 0 16px 48px #e3e7eb;
-        padding-top: 10px;
-      }
-    </style>
-
-    <!-- Navigation -->
+   
     <nav
       class="navbar navbar-expand-lg navbar-light bg-light shadow"
       id="mainNav"
     >
       <div class="container-fluid">
-        <a class="navbar-brand" href="{% url 'home' %}">Health Hacks</a>
+        <!-- Logo -->
+        <a class="navbar-brand" href="{% url 'blog' %}"><img src="{% static 'images/logo.webp' %}" alt="Health Hacks Logo" class="logo">Health Hacks</a>
         <button
           class="navbar-toggler navbar-toggler-right"
           type="button"
@@ -74,6 +52,7 @@
         >
           <span class="navbar-toggler-icon"></span>
         </button>
+        <!--Navigation items-->
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item text-black">
@@ -90,6 +69,11 @@
               >
             </li>
           </ul>
+
+          <!--Form for search bar and button-->
+            <form class="d-flex" role="search">
+            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-success" type="submit">Search</button>
         </div>
       </div>
     </nav>
