--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,23 +1,87 @@
- body {
-     font-family: "Roboto", sans-serif;
-     font-size: 17px;
-     background-color: #fdfdfd;
- }
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Open+Sans:ital,wght@1,300&family=Teko:wght@300&display=swap');
 
- .shadow {
-     box-shadow: 0 4px 2px -2px rgba(0, 0, 0, 0.1);
- }
+:root {
+    /** Fonts */
+    --title: 'EB Garamond', serif;
+    --main-font: 'Open Sans', serif;
 
- .btn-danger {
-     color: #fff;
-     background-color: #f00000;
-     border-color: #dc281e;
- }
+    /** Fonts */
+    --background: #fdfdfd;
+    --blue: #3398e1;
+    --black: black;
+    --off-white: #e3e7eb;
+    --white: #fff;
+    --orange: #f00000;
 
- .masthead {
-     background: #3398e1;
-     height: auto;
-     padding-bottom: 15px;
-     box-shadow: 0 16px 48px #e3e7eb;
-     padding-top: 10px;
- }
+    /** Utils */
+
+    --small-box-shadow: 1px -1px 7px 0 #00000061;
+    --border: 1px solid #00000030;
+}
+
+/** header */
+
+.navbar {
+    background-color: var(--off-white);
+    box-shadow: var(--small-box-shadow);
+}
+
+a.nav-link {
+    color: var(--black);
+}
+
+img.logo {
+    width: 160px;
+    height: 100px;
+    background-color: var(--blue);
+}
+
+html,
+body {
+    height: 100%;
+    background-color: #fdfdfd;
+}
+
+body {
+    display: flex;
+    flex-direction: column;
+    font-family: var(--main-font);
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-family: var(--title);
+}
+
+main {
+    flex: 1 0 auto;
+    background-color: var(--white);
+}
+
+/** footer */
+
+footer {
+    flex-shrink: 0;
+}
+
+.shadow {
+    box-shadow: 0 4px 2px -2px rgba(0, 0, 0, 0.1);
+}
+
+.btn-danger {
+    color: #fff;
+    background-color: #f00000;
+    border-color: #dc281e;
+}
+
+.masthead {
+    background: #3398e1;
+    height: auto;
+    padding-bottom: 15px;
+    box-shadow: 0 16px 48px #e3e7eb;
+    padding-top: 10px;
+}
