--- a/templates/base.html
+++ b/templates/base.html
@@ -28,57 +28,13 @@
       referrerpolicy="no-referrer"
     ></script>
     {% endblock %}
-    <title>Health Hacks {% block title %}{% endblock %}</title>
+    <title>Health Hacks - {% block title %}{% endblock %}</title>
   </head>
-
   <body>
     {% include 'includes/header.html' %}
-   
-    <nav
-      class="navbar navbar-expand-lg navbar-light bg-light shadow"
-      id="mainNav"
-    >
-      <div class="container-fluid">
-        <!-- Logo -->
-        <a class="navbar-brand" href="{% url 'blog' %}"><img src="{% static 'images/logo.webp' %}" alt="Health Hacks Logo" class="logo">Health Hacks</a>
-        <button
-          class="navbar-toggler navbar-toggler-right"
-          type="button"
-          data-toggle="collapse"
-          data-target="#navbarResponsive"
-          aria-controls="navbarResponsive"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <!--Navigation items-->
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item text-black">
-              <a class="nav-link text-black font-weight-bold" href="#">About</a>
-            </li>
-            <li class="nav-item text-black">
-              <a class="nav-link text-black font-weight-bold" href="#"
-                >Policy</a
-              >
-            </li>
-            <li class="nav-item text-black">
-              <a class="nav-link text-black font-weight-bold" href="#"
-                >Contact</a
-              >
-            </li>
-          </ul>
 
-          <!--Form for search bar and button-->
-            <form class="d-flex" role="search">
-            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success" type="submit">Search</button>
-        </div>
-      </div>
-    </nav>
-    {% block content %}
-    <!-- Content Goes here -->
-    {% endblock content %} {% include 'includes/footer.html' %}
+    <main>{% block content %} {% endblock %}</main>
+
+    {% include 'includes/footer.html' %} {% block extra_js %} {% endblock %}
   </body>
 </html>
