style details page

--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -1,40 +1,27 @@
-{% load static %}
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-  <body>
-    {% block sidebar %}
+{% block sidebar %}
 
-    <style>
-      .card {
-        box-shadow: 0 16px 48px #e3e7eb;
-      }
-    </style>
+<style>
+  .card {
+    box-shadow: 0 16px 48px #e3e7eb;
+  }
+</style>
 
-    <!-- Sidebar Widgets Column -->
-    <div class="col-md-4 float-right">
-      <div class="card my-4">
-        <h5 class="card-header">About Us</h5>
-        <div class="card-body">
-          <p class="card-text">
-            This awesome blog is made on the top of our Favourite full stack
-            Framework 'Django', follow up the tutorial to learn how we made
-            it..!
-          </p>
-          <a
-            href="https://djangocentral.com/building-a-blog-application-with-django"
-            class="btn btn-danger"
-            >Know more!</a
-          >
-        </div>
-      </div>
+<!-- Sidebar Widgets Column -->
+<div class="col-md-4 float-right">
+  <div class="card my-4">
+    <h5 class="card-header">About Us</h5>
+    <div class="card-body">
+      <p class="card-text">
+        This awesome blog is made on the top of our Favourite full stack
+        Framework 'Django', follow up the tutorial to learn how we made it..!
+      </p>
+      <a
+        href="https://djangocentral.com/building-a-blog-application-with-django"
+        class="btn btn-danger"
+        >Know more!</a
+      >
     </div>
+  </div>
+</div>
 
-    {% endblock sidebar %}
-  </body>
-</html>
+{% endblock sidebar %}
