--- a/static/css/base.css
+++ b/static/css/base.css
@@ -68,6 +68,20 @@ footer {
     flex-shrink: 0;
 }
 
+/** form */
+
+form {
+    width: 60%;
+    margin-top: 40px;
+    margin-left: 30px;
+    background-color: var(--off-white);
+}
+
+.form-control {
+    width: 35%;
+}
+
+
 .shadow {
     box-shadow: 0 4px 2px -2px rgba(0, 0, 0, 0.1);
 }
