--- a/blog/templates/index.html
+++ b/blog/templates/index.html
@@ -1,30 +1,4 @@
 {% extends "base.html" %} {% block content %}
-<style>
-  body {
-    font-family: "Roboto", sans-serif;
-    font-size: 18px;
-    background-color: #fdfdfd;
-  }
-
-  .head_text {
-    color: white;
-  }
-
-  .card {
-    box-shadow: 0 16px 48px #e3e7eb;
-  }
-  a.btn.btn-primary {
-    color: #fff;
-    background-color: hsl(50, 33%, 25%);
-    border-color: black;
-  }
-  a.btn.btn-primary:hover {
-    color: #fff;
-    background-color: hsla(50, 33%, 25%, 0.75);
-    border-color: orangered;
-  }
-</style>
-
 <header class="masthead">
   <div class="overlay"></div>
   <div class="container">
@@ -32,9 +6,12 @@
       <div class="col-md-8 col-md-10 mx-auto">
         <div class="site-heading">
           <h3 class="site-heading my-4 mt-3 text-white">
-            Welcome to my awesome Blog
+            Restoring health and wellness
           </h3>
-          <p class="text-light">We Love Django As much as you do..! &nbsp</p>
+          <p class="text-light">
+            Take the fron seat to most in trend science based tools of
+            influencing your lifespan.
+          </p>
         </div>
       </div>
     </div>
