--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -27,7 +27,7 @@
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
             <a
-              class="nav-link active"
+              class="nav-link {% if url_name == 'health_hacks' %}active{% endif %}"
               aria-current="page"
               href="{% url 'home' %}"
               >Home</a
@@ -39,26 +39,32 @@
           <li class="nav-item">
             <a class="nav-link" href="#">New</a>
           </li>
-          <li class="nav-item dropdown">
+          {% if request.user.is_authenticated %}
+          <li class="nav-item">
             <a
-              class="nav-link dropdown-toggle"
-              href="#"
-              role="button"
-              data-bs-toggle="dropdown"
-              aria-expanded="false"
+              class="nav-link {% if url_name == 'accounts_logout' %}active{% endif %}"
+              href="/accounts/logout"
+              >Logout</a
             >
-              Dropdown
-            </a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Action</a></li>
-              <li><a class="dropdown-item" href="#">Another action</a></li>
-              <li>
-                <hr class="dropdown-divider" />
-              </li>
-              <li><a class="dropdown-item" href="#">Something else here</a></li>
-            </ul>
           </li>
+          {% else %}
+          <li class="nav-item">
+            <a
+              class="nav-link {% if url_name == 'accounts_signup' %}active{% endif %}"
+              href="/accounts/signup"
+              >Register</a
+            >
+          </li>
+          <li class="nav-item">
+            <a
+              class="nav-link {% if url_name == 'accounts_login' %}active{% endif %}"
+              href="/accounts/login"
+              >Login</a
+            >
+          </li>
+          {% endif %}
         </ul>
+
         <form class="d-flex" role="search">
           <input
             class="form-control me-2"
