--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -2,48 +2,63 @@
 
 <header>
   {% with request.resolver_match.url_name as url_name %}
-  <nav class="navbar navbar-expand-lg bg-body-tertiary">
+  <nav class="navbar navbar-expand-lg bg-light">
     <div class="container-fluid">
       <!-- Logo -->
       <a class="navbar-brand" href="#"
         ><img
-          src="{% static 'images/noBgColor.png' %}"
-          alt="Health Hacks Logo"
+          src="{% static 'images/logo.webp' %}"
+          alt="Health hacks sharing Logo"
           class="logo"
       /></a>
       <button
         class="navbar-toggler"
         type="button"
         data-bs-toggle="collapse"
-        data-bs-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent"
+        data-bs-target="#navbarNav"
+        aria-controls="navbarNav"
         aria-expanded="false"
         aria-label="Toggle navigation"
       >
         <span class="navbar-toggler-icon"></span>
       </button>
       <!-- Navigation items -->
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav me-auto mb-2">
           <li class="nav-item">
             <a
-              class="nav-link {% if url_name == 'health_hacks' %}active{% endif %}"
+              class="nav-link {% if url_name == 'home' %}active{% endif %}"
               aria-current="page"
               href="{% url 'home' %}"
               >Home</a
             >
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Health Hacks</a>
+            <a
+              class="nav-link {% if url_name == 'health_hacks' %}active{% endif %}"
+              href="{% url '.health_hacks' %}"
+              >HealthHacks</a
+            >
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">New</a>
+            <a
+              class="nav-link {% if url_name == 'add_health_hack' %}active{% endif %}"
+              href="{% url 'add_health_hack' %}"
+              >New</a
+            >
           </li>
           {% if request.user.is_authenticated %}
           <li class="nav-item">
             <a
+              class="nav-link {% if url_name == 'profile' %}active{% endif %}"
+              href="{% url 'profile' request.user.id %}"
+              >Profile</a
+            >
+          </li>
+          <li class="nav-item">
+            <a
               class="nav-link {% if url_name == 'accounts_logout' %}active{% endif %}"
-              href="/accounts/logout"
+              href="/accounts/logout/"
               >Logout</a
             >
           </li>
@@ -51,28 +66,34 @@
           <li class="nav-item">
             <a
               class="nav-link {% if url_name == 'accounts_signup' %}active{% endif %}"
-              href="/accounts/signup"
+              href="/accounts/signup/"
               >Register</a
             >
           </li>
           <li class="nav-item">
             <a
               class="nav-link {% if url_name == 'accounts_login' %}active{% endif %}"
-              href="/accounts/login"
+              href="/accounts/login/"
               >Login</a
             >
           </li>
           {% endif %}
         </ul>
-
-        <form class="d-flex" role="search">
+        <!-- Form for search bar -->
+        <form
+          class="d-flex"
+          role="search"
+          method="GET"
+          action="{% url 'recipes' %}"
+        >
           <input
             class="form-control me-2"
+            name="q"
             type="search"
             placeholder="Search"
             aria-label="Search"
           />
-          <button class="btn btn-outline-success" type="submit">Search</button>
+          <button class="btn btn-outline-primary" type="submit">Search</button>
         </form>
       </div>
     </div>
