Add models forms and views to manage health hacks

--- a/health_hacks/templates/health_hacks/health_hacks.html
+++ b/health_hacks/templates/health_hacks/health_hacks.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %} {% block title %}Recipes{% endblock %} {% block
+{% extends "base.html" %} {% block title %}Health Hacks{% endblock %} {% block
 content %}
 <h1 class="text-center p-2 d-block">Latest Health Hacks</h1>
 <div class="container d-flex flex-row flex-wrap justify-content-center">
