--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -36,7 +36,7 @@
           <li class="nav-item">
             <a
               class="nav-link {% if url_name == 'health_hacks' %}active{% endif %}"
-              href="{% url '.health_hacks' %}"
+              href="{% url 'health_hacks' %}"
               >HealthHacks</a
             >
           </li>
