Initial set up crud functionality

--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -37,8 +37,7 @@
             <a
               class="nav-link {% if url_name == 'health_hacks' %}active{% endif %}"
               href="{% url 'health_hacks' %}"
-              >HealthHacks</a
-            >
+              >Health Hacks</a>
           </li>
           <li class="nav-item">
             <a
