Create details page and edit and delete functions

--- a/health_hacks/templates/health_hacks/health_hacks.html
+++ b/health_hacks/templates/health_hacks/health_hacks.html
@@ -5,7 +5,7 @@ content %}
   {% for health_hack in health_hacks %}
   <a
     href="{% url 'post_detail' health_hack.id %}"
-    class="health-hacks"
+    class="health_hacks"
     aria-label="Click to view {{health_hack.title}}"
   >
     <div class="card m-3" style="width: 18rem">
