--- a/health_hacks/templates/health_hacks/post_detail.html
+++ b/health_hacks/templates/health_hacks/post_detail.html
@@ -1,11 +1,18 @@
-{% extends 'base.html' %} {% block content %}
+{% extends 'base.html' %} 
+{% block title %} Health Hack Detail - {{health_hack.title}}{% endblock %}
+
+{% block content %}
 <div class="container">
+<div class="hack-img">
+    <img src="{{ hack.image.url }}" alt="{{ hack.image_alt }}" class="hack-pic">
+</div>
     <div class="row">
         <div class="col-md-8 card mb-4  mt-3 left  top">
             <div class="card-body">
                 <h1>{% block title %} {{ object.title }} {% endblock title %}</h1>
                 <p class=" text-muted">{{ post.author }} | {{ post.created_on }}</p>
                 <p class="card-text ">{{ object.content }}</p>
+                <p class="p-3"><strong>Health Hack: </strong> {{ health_hack.hack_type|title }}</p>
             </div>
         </div>
     </div>
@@ -17,6 +24,12 @@
                 <h1>{{ post.title }}</h1>
                 <p class=" text-muted">{{ post.author }} | {{ post.created_on }}</p>
                 <p class="card-text ">{{ post.content | safe }}</p>
+                 {% if request.user == helath_hack.user %} 
+                <div class="text-center">
+                    <a href="{% url 'edit_health_hack' health_hack.id %}" class="btn btn-primary w-25">Edit</a>
+                    <a href="{% url 'delete_health_hack' health_hack.id %}" class="btn btn-primary w-25">Delete</a>
+                </div>
+                {% endif %}
             </div>
         </div>
         <div class="col-md-8 card mb-4  mt-3 ">
