--- a/static/css/base.css
+++ b/static/css/base.css
@@ -150,3 +150,10 @@ a.btn.btn-primary:hover {
 .healt_hacks:hover {
     cursor: pointer;
 }
+
+@media screen and (min-width: 62.5em) {
+    .hack-img {
+        width: 40%;
+        margin: 0 auto;
+    }    
+}
