--- a/health_hacks/templates/health_hacks/post_detail.html
+++ b/health_hacks/templates/health_hacks/post_detail.html
@@ -24,7 +24,7 @@
                 <h1>{{ post.title }}</h1>
                 <p class=" text-muted">{{ post.author }} | {{ post.created_on }}</p>
                 <p class="card-text ">{{ post.content | safe }}</p>
-                 {% if request.user == helath_hack.user %} 
+                 {% if request.user == health_hack.user %} 
                 <div class="text-center">
                     <a href="{% url 'edit_health_hack' health_hack.id %}" class="btn btn-primary w-25">Edit</a>
                     <a href="{% url 'delete_health_hack' health_hack.id %}" class="btn btn-primary w-25">Delete</a>
