--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -27,9 +27,9 @@
         <ul class="navbar-nav me-auto mb-2">
           <li class="nav-item">
             <a
-              class="nav-link {% if url_name == 'home' %}active{% endif %}"
+              class="nav-link {% if url_name == 'blog' %}active{% endif %}"
               aria-current="page"
-              href="{% url 'home' %}"
+              href="{% url 'blog' %}"
               >Home</a
             >
           </li>
