--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -26,12 +26,7 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav me-auto mb-2">
           <li class="nav-item">
-            <a
-              class="nav-link {% if url_name == 'blog' %}active{% endif %}"
-              aria-current="page"
-              href="{% url 'blog' %}"
-              >Home</a
-            >
+            <a class="nav-link {% if url_name == 'blog' %}active{% endif %}" aria-current="page" href="{% url 'blog' %}">Home</a>
           </li>
           <li class="nav-item">
             <a
@@ -45,7 +40,6 @@
               href="{% url 'add_health_hack' %}"
               >New</a
             >
-        */
       </div>
     </div>
   </nav>
